# TrainableFrFT

./: .gitignore  CITATION.cff  README.md  dataloader.py  dev.env  environment.yml  main.py  main_multigpu.py  main_singlegpu.py  main_sweep.py  pyproject.toml  requirements.txt  sweep_singlegpu.py  trainer.py  vgg_variants.py
configurations/: configs.py  sweep_config.yml
model_dicts/: vgg_variants.pkl
models/: custom_frft_layers.py  resnet.py  resnet_pretrained.py  vgg.py  vgg_pretrained.py
trainers/: multigpu_trainer.py  trainer.py
utils/: data_utils.py  main_utils.py  trainer_utils.py  utils.py
wandb/: latest-run
wandb/run-20230809_184637-extbtf02/: run-extbtf02.wandb
wandb/run-20230809_184718-52r7rksm/: run-52r7rksm.wandb
wandb/run-20230809_185124-prak8ys7/: run-prak8ys7.wandb
wandb/run-20230809_185546-zo2690o4/: run-zo2690o4.wandb
wandb/run-20230809_185900-wyxtucon/: run-wyxtucon.wandb
wandb/run-20230809_190346-j9ne36w2/: run-j9ne36w2.wandb
wandb/run-20230809_190457-mjce3pql/: run-mjce3pql.wandb
wandb/run-20230809_192046-xwxj44et/: run-xwxj44et.wandb
wandb/run-20230810_114843-muhvtr3r/: run-muhvtr3r.wandb
wandb/run-20230810_114936-n1midl4m/: run-n1midl4m.wandb
wandb/run-20230810_115252-zlgbfi25/: run-zlgbfi25.wandb
wandb/run-20230810_115442-o1jxv3mf/: run-o1jxv3mf.wandb
wandb/run-20230810_115643-8mizmfls/: run-8mizmfls.wandb
wandb/run-20230810_120001-fvon7ny3/: run-fvon7ny3.wandb
wandb/run-20230810_120125-3rdpumh6/: run-3rdpumh6.wandb
wandb/run-20230810_131217-sp8jd8pl/: run-sp8jd8pl.wandb
(+275 files in other folders)
